# streamlitappcrypto

./: Dockerfile  github.txt  pyproject.toml  requirements.txt
app/: main.py
students/: student_twinkle  student_twinkle.py
